--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -92,4 +92,5 @@
   - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
   - version.log renamed to ChangeLog
   - removed support for DOS with BC3.1
-
+Aug 13, 1999
+  - _dummy_for_tkenv_inspect() bug fixed
