*** empty log message ***

--- a/doc/README
+++ b/doc/README
@@ -129,7 +129,7 @@ Initial revision of PVM support (as final project), spring 1996:
 
 I'd like to acknowledge the help and support of several people who contributed
 to making OMNeT++ better and more useful for the Internet community:
-Richard Lyon, Joel Sherrill, Nimrod Mesika, Ulrich Kaage, Dan Talayco, Y. Ahmet
+Richard Lyon, Joel Sherrill, Nimrod Mesika, Dan Talayco, Y. Ahmet
 Sekercioglu, Brent Weech, Alan Kennington, Kontogiannis Theophanis, Dario
 Mariani.
 
