--- a/src/gned/TODO
+++ b/src/gned/TODO
@@ -36,11 +36,11 @@ Load/save:
 - load: if there's a parse error, load the whole stuff into a "scratch" text-mode canvas?
 
 Text editor:
-- add find/replace dialog
 - pgup, ctrl-pgup doesn't work correctly
 - make status line: line number etc.
 - syntax highlighting not 100% OK: it can be fooled with string constants
   containing `//' or `\"' sequences; `in:' and `out:' are not highlighted
+- syntax highlight: <paste> should update the whole file
 
 General:
 - INCREASE PERFORMANCE! Get rid of "foreach i [array names ned ...]" statements...
