--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -305,3 +305,5 @@ Aug 7, 1999
 Aug 13, 1999
   - default width of connection arrows changed from 2 to 1 pixels to be
     consistent with GNED
+Aug 30, 1999
+  - bugfix on the toolbar of graphical gate inspector
