--- a/doc/TODO
+++ b/doc/TODO
@@ -1,15 +1,15 @@
 Further plans...
 ~~~~~~~~~~~~~~~~
-(things that just came to my mind, in no particular order)
-
 Aug 25, 1998, somewhat updated in Aug 1999
 
 
 improve the simulation core
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 direct support for message subclassing (1st priority but takes time)
+"generation gap" oo design pattern for the generated code (modules, channels etc).
 proper connection objects
 more flexible connections
+--
 bidirectional gates (?)
 propagate state info over connections ("statistic wires")
 multi-thread simple modules
