*** empty log message ***

--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -662,9 +662,9 @@ Sept 7, 1999
     is called _after_ the call on submodules.
 ------ omnetpp-2.0b released ------
 Sept 20, 1999
-  - a bug fixed in cWeightedStdDev::collect2(): cStdDev::collect() was called
+  - bug fixed in cWeightedStdDev::collect2(): cStdDev::collect() was called
     with val instead of weight*val.
-  - fixed a bug with misplaced ev.messageDelivered() calls in the receiveNew()
-    and receiveNewOn() functions
+  - bug fixed with misplaced ev.messageDelivered() calls in the receiveNewOn()
+    function
 
 Remaining -Wall warnings: "%lf", "%lg", "%le" in printf format strings.
