--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -677,8 +677,8 @@ Oct 6, 1999
   - isSelfMessage() member function added to cMessage. It tells if the message
     was sent (using a send..() function) or posted by a scheduleAt() call.
   - a new void* pointer was added to cMessage. The pointer is set/returned by
-    the setContextPtr(void *p) and contextPtr() functions, and it can be used
-    for any purpose by the simulation programmer. It is not used by the
+    the setContextPointer(void *p) and contextPointer() functions, and it can
+    be used for any purpose by the simulation programmer. It is not used by the
     simulation kernel, and it is treated as a mere pointer (no memory mgmt is
     done on it). Intended purpose: a module which schedules several
     self-messages (timers) will need to identify a self-message when it arrives
