--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -86,3 +86,6 @@
   - tcl2c.c moved here
 July 17, 1999
   - seedtool help text changed
+------ omnetpp-2.0b released ------
+Oct 10, 1999
+  - makemake: better error handling with recursive makefiles
