--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -89,3 +89,5 @@ July 17, 1999
 ------ omnetpp-2.0b released ------
 Oct 10, 1999
   - makemake: better error handling with recursive makefiles; EXE_SUFFIX added
+  - tcl2c.c: encoding simplified (old one was unnecessarily complicated and
+    didn't work under cygwin)
