--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -146,3 +146,4 @@ Aug 28, 1999
   - ddfields() array introduced for performance reasons
 Aug 30, 1999
   - status bar added for text editor
+------ omnetpp-2.0b2 released ------
