--- a/src/plove-old/ChangeLog
+++ b/src/plove-old/ChangeLog
@@ -45,6 +45,4 @@
   - version.log renamed to ChangeLog
 July 17, 1999
   - added slash/backslash option for gnuplot on Windows
-
-
-
+------ omnetpp-2.0b2 released ------
