--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -52,7 +52,6 @@ FDDI50.arj
     my_station_id = parentmod()->index(); //in the case of a ring made by indexing
   else
     my_station_id = par("StationID")
-
 FDDI51.arj
   In the NeD file:
   - parameter max_idle deleted
@@ -137,16 +136,12 @@ FDDI64.tgz
   - the implementation of the FDDI MAC was placed into file fddi_mac.cc
 FDDI65.tgz
   - separate files for different parts:
-
     The essential files for the FDDI MAC:
     fddi_mac.ned fddi_def.h fddi_mac.h fddi_mac.cc
-
     The files for the SSM Input and Output interfaces:
     ssm_ifs.ned ssmifdef.h ssm_ifs.h ssm_ifs.cc
-
     The file that contains the topology description of the FDDI network:
     fddi_net.ned
-
     Other parts of the simulation:
     othermod.ned otherdef.h othermod.h othermod.cc
 FDDI66.tgz
@@ -186,3 +181,4 @@ FDDI80.arj (--VA)
   - removed support for DOS with BC3.1
 Jul 11, 1999
   - bug in mystrlwr() [othermod.cc] fixed
+------ omnetpp-2.0b2 released ------
