--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -97,3 +97,4 @@ Aug 13, 1999
 ------ omnetpp-2.0b released ------
 Sept 20, 1999
  - typo fixed in Makefile.in: $(CLFAGS) --> $(CFLAGS)
+------ omnetpp-2.0b2 released ------
